@@ -79,16 +79,16 @@ class P4A_Validate extends Zend_Validate
  */
 class P4A_Validate_Alnum extends Zend_Validate_Alnum
 {
-    /**
-     * @param  boolean $allowWhiteSpace
-     */
-    public function __construct($allowWhiteSpace = false)
-    {
-    	parent::__construct($allowWhiteSpace);
-    	foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	/**
+	 * @param  boolean $allowWhiteSpace
+	 */
+	public function __construct($allowWhiteSpace = false)
+	{
+		parent::__construct($allowWhiteSpace);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -98,16 +98,16 @@ class P4A_Validate_Alnum extends Zend_Validate_Alnum
  */
 class P4A_Validate_Alpha extends Zend_Validate_Alpha
 {
-    /**
-     * @param  boolean $allowWhiteSpace
-     */
-    public function __construct($allowWhiteSpace = false)
-    {
-    	parent::__construct($allowWhiteSpace);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	/**
+	 * @param  boolean $allowWhiteSpace
+	 */
+	public function __construct($allowWhiteSpace = false)
+	{
+		parent::__construct($allowWhiteSpace);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -117,19 +117,19 @@ class P4A_Validate_Alpha extends Zend_Validate_Alpha
  */
 class P4A_Validate_Between extends Zend_Validate_Between
 {
-    /**
-     * @param  mixed   $min
-     * @param  mixed   $max
-     * @param  boolean $inclusive
-     * @return void
-     */
-    public function __construct($min, $max, $inclusive = true)
-    {
-    	parent::__construct($min, $max, $inclusive);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	/**
+	 * @param  mixed   $min
+	 * @param  mixed   $max
+	 * @param  boolean $inclusive
+	 * @return void
+	 */
+	public function __construct($min, $max, $inclusive = true)
+	{
+		parent::__construct($min, $max, $inclusive);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -141,9 +141,9 @@ class P4A_Validate_Ccnum extends Zend_Validate_Ccnum
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -156,9 +156,9 @@ class P4A_Validate_Date extends Zend_Validate_Date
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -171,9 +171,9 @@ class P4A_Validate_Digits extends Zend_Validate_Digits
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -184,19 +184,19 @@ class P4A_Validate_Digits extends Zend_Validate_Digits
  */
 class P4A_Validate_EmailAddress extends Zend_Validate_EmailAddress
 {
-    /**
-     * @param integer                $allow             OPTIONAL
-     * @param bool                   $validateMx        OPTIONAL
-     * @param Zend_Validate_Hostname $hostnameValidator OPTIONAL
-     * @return void
-     */
-    public function __construct($allow = Zend_Validate_Hostname::ALLOW_DNS, $validateMx = false, Zend_Validate_Hostname $hostnameValidator = null)
-    {
-    	parent::__construct($allow, $validateMx, $hostnameValidator);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	/**
+	 * @param integer				$allow			 OPTIONAL
+	 * @param bool				   $validateMx		OPTIONAL
+	 * @param Zend_Validate_Hostname $hostnameValidator OPTIONAL
+	 * @return void
+	 */
+	public function __construct($allow = Zend_Validate_Hostname::ALLOW_DNS, $validateMx = false, Zend_Validate_Hostname $hostnameValidator = null)
+	{
+		parent::__construct($allow, $validateMx, $hostnameValidator);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -208,9 +208,9 @@ class P4A_Validate_Float extends Zend_Validate_Float
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -221,16 +221,16 @@ class P4A_Validate_Float extends Zend_Validate_Float
  */
 class P4A_Validate_GreaterThan extends Zend_Validate_GreaterThan
 {
-    /**
-     * @param  mixed $min
-     */
-    public function __construct($min)
-    {
-    	parent::__construct($min);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	/**
+	 * @param  mixed $min
+	 */
+	public function __construct($min)
+	{
+		parent::__construct($min);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -242,9 +242,9 @@ class P4A_Validate_Hex extends Zend_Validate_Hex
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -256,18 +256,18 @@ class P4A_Validate_Hex extends Zend_Validate_Hex
 class P4A_Validate_Hostname extends Zend_Validate_Hostname
 {
 	/**
-     * @param integer          $allow       OPTIONAL Set what types of hostname to allow (default ALLOW_DNS)
-     * @param boolean          $validateIdn OPTIONAL Set whether IDN domains are validated (default true)
-     * @param boolean          $validateTld OPTIONAL Set whether the TLD element of a hostname is validated (default true)
-     * @param Zend_Validate_Ip $ipValidator OPTIONAL
-     */
-    public function __construct($allow = self::ALLOW_DNS, $validateIdn = true, $validateTld = true, Zend_Validate_Ip $ipValidator = null)
-    {
-    	parent::__construct($allow, $validateIdn, $validateTld, $ipValidator);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	 * @param integer		  $allow	   OPTIONAL Set what types of hostname to allow (default ALLOW_DNS)
+	 * @param boolean		  $validateIdn OPTIONAL Set whether IDN domains are validated (default true)
+	 * @param boolean		  $validateTld OPTIONAL Set whether the TLD element of a hostname is validated (default true)
+	 * @param Zend_Validate_Ip $ipValidator OPTIONAL
+	 */
+	public function __construct($allow = self::ALLOW_DNS, $validateIdn = true, $validateTld = true, Zend_Validate_Ip $ipValidator = null)
+	{
+		parent::__construct($allow, $validateIdn, $validateTld, $ipValidator);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -277,17 +277,17 @@ class P4A_Validate_Hostname extends Zend_Validate_Hostname
  */
 class P4A_Validate_InArray extends Zend_Validate_InArray
 {
-    /**
-     * @param  array   $haystack
-     * @param  boolean $strict
-     */
-    public function __construct(array $haystack, $strict = false)
-    {
-    	parent::__construct($haystack, $strict);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	/**
+	 * @param  array   $haystack
+	 * @param  boolean $strict
+	 */
+	public function __construct(array $haystack, $strict = false)
+	{
+		parent::__construct($haystack, $strict);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -299,9 +299,9 @@ class P4A_Validate_Int extends Zend_Validate_Int
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -314,9 +314,9 @@ class P4A_Validate_Ip extends Zend_Validate_Ip
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
 	}
 }
 
@@ -328,15 +328,15 @@ class P4A_Validate_Ip extends Zend_Validate_Ip
 class P4A_Validate_LessThan extends Zend_Validate_LessThan
 {
 	/**
-     * @param  mixed $max
-     */
-    public function __construct($max)
-    {
-    	parent::__construct($max);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	 * @param  mixed $max
+	 */
+	public function __construct($max)
+	{
+		parent::__construct($max);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -348,9 +348,22 @@ class P4A_Validate_NotEmpty extends Zend_Validate_NotEmpty
 {
 	public function __construct()
 	{
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
+	
+	public function isValid($value)
+	{
+		$valueString = (string) $value;
+		$this->_setValue($valueString);
+
+		if (strlen($valueString) == 0) {
+			$this->_error();
+			return false;
+		}
+
+		return true;
 	}
 }
 
@@ -362,15 +375,15 @@ class P4A_Validate_NotEmpty extends Zend_Validate_NotEmpty
 class P4A_Validate_Regex extends Zend_Validate_Regex
 {
 	/**
-     * @param  string $pattern
-     */
-    public function __construct($pattern)
-    {
-    	parent::__construct($pattern);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	 * @param  string $pattern
+	 */
+	public function __construct($pattern)
+	{
+		parent::__construct($pattern);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
 
 /**
@@ -381,14 +394,14 @@ class P4A_Validate_Regex extends Zend_Validate_Regex
 class P4A_Validate_StringLength extends Zend_Validate_StringLength
 {
 	/**
-     * @param  integer $min
-     * @param  integer $max
-     */
-    public function __construct($min = 0, $max = null)
-    {
-    	parent::__construct($min, $max);
-        foreach ($this->_messageTemplates as &$messageTemplate) {
-    		$messageTemplate = __($messageTemplate);
-    	}
-    }
+	 * @param  integer $min
+	 * @param  integer $max
+	 */
+	public function __construct($min = 0, $max = null)
+	{
+		parent::__construct($min, $max);
+		foreach ($this->_messageTemplates as &$messageTemplate) {
+			$messageTemplate = __($messageTemplate);
+		}
+	}
 }
