@@ -7,6 +7,8 @@
 - a bug with empty values in P4A_Tables (passed to formatters) was solved
 - P4A_I18N::format() and normalize() methods now returns an empty string if
   no value is passed
+- P4A_Validate_NotEmpty::isValid() method now correctly handles the "0" string
+  (which is a Zend Framework bug but we create a workaround for it)
 
 2.99.7
 - a bug with disabled P4A_Field::getAsCheckbox() was solved
